feat: udistrital/sga_documentacion#507 controlador GetColocacionInfoAdicional
