# swagger/swagger.json
@@ -15,13 +15,267 @@
     },
     "basePath": "/v1",
     "paths": {
-        "/grupo-estudio/getAll": {
+        "/colocacion-espacio-academico/": {
+            "get": {
+                "tags": [
+                    "colocacion-espacio-academico"
+                ],
+                "description": "get colocaciones de espacios academicos segun id de grupo estudio y id del periodo",
+                "operationId": "ColocacionEspacioAcademicoController.GetColocacionesSegunGrupoEstudioYPeriodo",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "grupo-estudio-id",
+                        "description": "Se recibe parametro: id del grupo estudio",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "periodo-id",
+                        "description": "Se recibe parametro: id del periodo",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/colocacion-espacio-academico/info-adicional/{id}": {
+            "get": {
+                "tags": [
+                    "colocacion-espacio-academico"
+                ],
+                "description": "obtiene la colocacion con mas datos sobre la misma",
+                "operationId": "ColocacionEspacioAcademicoController.GetColocacionInfoAdicional",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "id de la colocacion",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/colocacion-espacio-academico/sobreposicion": {
+            "get": {
+                "tags": [
+                    "colocacion-espacio-academico"
+                ],
+                "description": "get si hay una colocacion puesta en donde se quiere poner otra",
+                "operationId": "ColocacionEspacioAcademicoController.GetSobreposicionColocacion",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "colocacion-id",
+                        "description": "Se recibe parametro: id de la colocacion",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "periodo-id",
+                        "description": "Se recibe parametro: id del periodo",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/docente/pre-asignacion": {
+            "get": {
+                "tags": [
+                    "docente"
+                ],
+                "description": "get preasignaciones de docente segun el periodo",
+                "operationId": "DocenteController.getPreasignacionesSegunDocenteYPeriodo",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "docente-id",
+                        "description": "Se recibe parametro: id del docente",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "periodo-id",
+                        "description": "Se recibe parametro: ide del periodo",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/docente/vinculaciones": {
+            "get": {
+                "tags": [
+                    "docente"
+                ],
+                "description": "get docente y sus vinculaciones por documento",
+                "operationId": "DocenteController.GetDocenteYVincuaciones",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "documento",
+                        "description": "Se recibe parametro: documento del docente",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/espacio-fisico/ocupados": {
+            "get": {
+                "tags": [
+                    "espacio-fisico"
+                ],
+                "description": "get espacios ocupacdos de un espacio fisico segun el periodo",
+                "operationId": "EspacioFisicoController.GetEspaciosOCupadoSegunPeriodo",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "espacio-fisico-id",
+                        "description": "Se recibe parametro: id del espacio fisico",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "periodo-id",
+                        "description": "Se recibe parametro: id del periodo",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/grupo-estudio/": {
             "get": {
                 "tags": [
                     "grupo-estudio"
                 ],
-                "description": "get events",
-                "operationId": "GrupoEstudioController.getGrupoEstudio",
+                "description": "get grupos de estudio segun horario y semestre",
+                "operationId": "GrupoEstudioController.getGrupoEstudioSegunHorarioYSemestre",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "horario-id",
+                        "description": "Se recibe parametro: id del horario",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "semestre-id",
+                        "description": "Se recibe parametro: id del semestre",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/grupo-estudio/{id}": {
+            "delete": {
+                "tags": [
+                    "grupo-estudio"
+                ],
+                "description": "delete grupo estudio",
+                "operationId": "GrupoEstudioController.deleteGrupoEstudio",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "grupo de estudio id",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} delete success!"
+                    },
+                    "404": {
+                        "description": "not found resource"
+                    }
+                }
+            }
+        },
+        "/horario/calendario": {
+            "get": {
+                "tags": [
+                    "horario"
+                ],
+                "description": "Obtener si hay eventos de calendario para hacer acciones con el modulo de horario",
+                "operationId": "HorarioController.GetActividadesParaHorarioYPlanDocente",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "periodo-id",
+                        "description": "Se recibe parametro: id del periodo",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "nivel-id",
+                        "description": "Se recibe parametro: id del nivel",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "dependencia-id",
+                        "description": "Se recibe parametro: id del dependecia",
+                        "type": "string"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "{}"
@@ -35,7 +289,23 @@
     },
     "tags": [
         {
+            "name": "colocacion-espacio-academico",
+            "description": "Operations about GruposEstudio\n"
+        },
+        {
+            "name": "espacio-fisico",
+            "description": "Operations about GruposEstudio\n"
+        },
+        {
+            "name": "docente",
+            "description": "Operations about GruposEstudio\n"
+        },
+        {
             "name": "grupo-estudio",
+            "description": "Operations about GruposEstudio\n"
+        },
+        {
+            "name": "horario",
             "description": "Operations about GruposEstudio\n"
         }
     ]
